Brutal CSS hacks to fix overflow problems for the sidebar

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -57,6 +57,7 @@ h1, h2, h3, h4, h5 ,h6 {
   height: auto;
   min-height: 850px;
   margin: -40px 0 0 0;
+  @include pie-clearfix;
 }
 
 
@@ -217,7 +218,6 @@ article p.meta {
 }
 
 article {
-  width: 60%;
   padding-bottom: 30px;
 }
 
@@ -251,13 +251,22 @@ article section {
 
 /* Sidebar */
 
+#content {
+  float: left;
+  padding-right: 1.25%;
+  border-right: solid 1px #b1b1b1;
+  margin-right: -1px;
+  width: 65%;
+}
+
 .sidebar {
-  position: absolute;
-  width: 29%;
-  top: 175px;
-  left: 67%;
+  float: left;
+  width: 30%;
+  padding-top: 24px;
+  padding-bottom: 12px;
+  padding-left: 1.25%;
+  margin-right: 2.5%;
   border-left: solid 1px #b1b1b1;
-  padding-left: 20px;
 }
 
 .sidebar ul {
@@ -411,11 +420,6 @@ footer P {
     left: 0px;
     margin-bottom: 40px;
   } 
-
-  article {
-    width: 90%;
-  }
-
 
   a.reg-btn {
     background-image: url(../images/reg-btn.png);
